# src/controllers/delete-ozon-promos.ts
@@ -3,13 +3,11 @@ import { getProducts } from '../services/moysklad/productController'
 import {
 	deletePromosOffers,
 	getPromos,
+	getPromosOffers,
 	getPromosProducts,
-} from '../services/ozon/promosController'
-import {
-	type PromoProduct,
-	type PromoOffersById,
-	type SendPromoOfferResponse,
-} from '../types/ozonTypes'
+} from '../services/ozon/api'
+import { DeactivateActionProductsRequest } from '../types/ozon/ozon-types'
+import { PromoOffersById } from '../types/ozon/types'
 
 export const deleteOzonPromos = async (
 	store: string,
@@ -28,38 +26,25 @@ export const deleteOzonPromos = async (
 
 			Logger.info(`[${store}]: Получены данные по акциям из магазина...`)
 
-			const promosIds = promos?.map(promo => promo.id)
-
-			const fetchOneOffer = async (
-				id: number
-			): Promise<PromoProduct[] | undefined> => {
-				return await getPromosProducts({
-					action_id: id,
-					limit: 1000,
-				})
-			}
+			const promosIds =
+				promos
+					?.map(promo => promo.id)
+					.filter((id): id is number => id !== undefined) || []
 
 			const fetchAllOffers = async (
-				ids?: number[]
+				ids: number[]
 			): Promise<PromoOffersById> => {
-				let offers: PromoOffersById = {}
-
-				if (ids !== null && ids !== undefined && ids.length > 0) {
-					const offersById: PromoOffersById = {}
-
-					for (const id of ids) {
-						const offer = await fetchOneOffer(id)
-						if (offer != null) {
-							offersById[id] = offer
-						}
-					}
-					offers = {
-						...offers,
-						...offersById,
-					}
-				}
-
-				return offers
+				const offersById: PromoOffersById = {}
+				await Promise.all(
+					ids.map(async id => {
+						const offer = await getPromosOffers({
+							action_id: id,
+							limit: 1000,
+						})
+						if (offer) offersById[id] = offer
+					})
+				)
+				return offersById
 			}
 
 			const offersById = await fetchAllOffers(promosIds)
@@ -69,8 +54,11 @@ export const deleteOzonPromos = async (
 			)
 
 			for (const promoId in offersById) {
-				if (offersById[promoId]?.length != null) {
-					const promoForSend = offersById[promoId]?.reduce(
+				const promoOffers = offersById[promoId]
+				if (!promoOffers) continue
+
+				const promoForSend =
+					promoOffers.reduce<DeactivateActionProductsRequest>(
 						(acc, cur) => {
 							const product = products.rows.find(
 								item =>
@@ -78,7 +66,7 @@ export const deleteOzonPromos = async (
 										attr =>
 											attr.id ===
 											'8966aa35-8c49-11ef-0a80-0dcd0004b2ca'
-									)?.value === cur.id.toString()
+									)?.value === cur?.id?.toString()
 							)
 
 							const promoPrice = cur.max_action_price
@@ -89,40 +77,37 @@ export const deleteOzonPromos = async (
 										'b4b53c4e-7cd3-11ef-0a80-0f350015a3b8'
 								)?.value ?? 0
 
-							if (minPrice !== 0) {
+							if (minPrice !== 0 && promoPrice) {
 								if (promoPrice < minPrice / 100) {
-									acc.product_ids.push(cur.id)
+									acc.product_ids?.push(cur.id!)
 								}
 							}
-
 							return acc
 						},
 						{
 							action_id: +promoId,
-							product_ids:
-								[] as unknown as SendPromoOfferResponse['product_ids'],
-						}
+							product_ids: [],
+						} as DeactivateActionProductsRequest
 					)
 
-					if (
-						promoForSend != null &&
-						promoForSend?.product_ids?.length > 0
-					) {
-						const response = await deletePromosOffers(promoForSend)
+				if (
+					promoForSend.product_ids &&
+					promoForSend?.product_ids?.length > 0
+				) {
+					const response = await deletePromosOffers(promoForSend)
 
-						if (
-							response?.product_ids != null &&
-							response.product_ids.length > 0
-						) {
-							await sendReply(
-								`[${store}]: Из акции ["${
-									promos?.find(promo => promo.id === +promoId)
-										?.title
-								}"](https://seller.ozon.ru/app/highlights/${promoId}) было удалено ${
-									response?.product_ids.length
-								} товаров`
-							)
-						}
+					if (
+						response?.product_ids != null &&
+						response.product_ids.length > 0
+					) {
+						await sendReply(
+							`[${store}]: Из акции ["${
+								promos?.find(promo => promo.id === +promoId)
+									?.title
+							}"](https://seller.ozon.ru/app/highlights/${promoId}) было удалено ${
+								response?.product_ids.length
+							} товаров`
+						)
 					}
 				}
 			}
