# src/controllers/update-ozon-prices.ts
@@ -1,10 +1,30 @@
 import Logger from '../lib/logger'
 import { getProducts } from '../services/moysklad/productController'
+import { getProductPrices, sendPrices } from '../services/ozon/api'
+import { Product } from '../types/msTypes'
 import {
-	getProductPrices,
-	sendPrices,
-} from '../services/ozon/productController'
-import { type SendPricesRequest } from '../types/ozonTypes'
+	GetProductPricesRequestVisibilityEnum,
+	GetProductPrice,
+	ImportProductPricesRequest,
+} from '../types/ozon/ozon-types'
+
+const calculatePrices = (product?: Product, cur?: GetProductPrice) => {
+	const basicPrice =
+		product?.salePrices?.find(
+			item => item.priceType.id === '5f713df2-9981-11ee-0a80-0b5a00058c80'
+		)?.value ?? 0
+
+	const oldPrice = basicPrice / 100 + 500
+	const price = basicPrice / 100
+	const minPrice = Math.floor(price - price * 0.4)
+
+	return {
+		...cur,
+		min_price: minPrice.toString(),
+		price: price.toString(),
+		old_price: oldPrice.toString(),
+	}
+}
 
 export const updateOzonPrices = async (
 	store: string,
@@ -12,57 +32,38 @@ export const updateOzonPrices = async (
 ): Promise<void> => {
 	try {
 		const products = await getProducts()
-
 		Logger.info(`[${store}]: Получены данные по продуктам из МС...`)
 
-		if (products != null && products.rows.length > 0) {
+		if (products?.rows && products.rows.length > 0) {
 			const articlesFromMS = products.rows.map(row => row.article)
 			const prices = await getProductPrices({
 				filter: {
 					offer_id: articlesFromMS,
-					visibility: 'ALL',
+					visibility: 'ALL' as GetProductPricesRequestVisibilityEnum,
 				},
 				limit: 1000,
 			})
 			Logger.info(`[${store}]: Получены данные по ценам магазина...`)
 
-			const pricesForSend = prices?.items.reduce<SendPricesRequest>(
+			const pricesForSend = prices?.reduce<ImportProductPricesRequest>(
 				(acc, cur) => {
-					const product = products.rows.find(
+					const product = products?.rows.find(
 						item => item.article === cur.offer_id
 					)
-
-					const basicPrice =
-						product?.salePrices?.find(
-							item =>
-								item.priceType.id ===
-								'5f713df2-9981-11ee-0a80-0b5a00058c80'
-						)?.value ?? 0
-
-					const oldPrice = basicPrice / 100 + 500
-					const price = basicPrice / 100
-					const minPrice = Math.floor(price - price * 0.4)
-
-					acc.prices.push({
-						...cur,
-						min_price: minPrice.toString(),
-						price: price.toString(),
-						old_price: oldPrice.toString(),
-					})
+					acc.prices?.push(calculatePrices(product, cur))
 					return acc
 				},
-				{
-					prices: [],
-				}
+				{ prices: [] }
 			)
+
 			Logger.info(`[${store}]: Отправляю данные по ценам магазина...`)
 
-			if (pricesForSend != null && pricesForSend?.prices.length > 0) {
+			if (pricesForSend?.prices && pricesForSend?.prices?.length > 0) {
 				const response = await sendPrices(pricesForSend)
 
-				if (response?.result !== undefined) {
+				if (response?.result) {
 					for (const item of response.result) {
-						if (item.errors.length > 0) {
+						if (item.errors && item.errors?.length > 0) {
 							for (const error of item.errors) {
 								const message = `ID: ${item.offer_id}\nКод ошибки: ${error.code}\nСообщение: ${error.message}`
 								await sendMessage(`[${store}]: ${message}`)
@@ -80,6 +81,8 @@ export const updateOzonPrices = async (
 			Logger.info(`[${store}]: Магазин синхронизирован`)
 		}
 	} catch (err) {
-		Logger.error(`[${store}]: ${err as string}`)
+		Logger.error(
+			`[${store}]: Ошибка - ${err instanceof Error ? err.message : err}`
+		)
 	}
 }
